--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 name: Kun Industries
 
 # Short bio or description (displayed in the header)
-description: big boys with big toys
+description: Do it right.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars0.githubusercontent.com/u/40926044?s=460&v=4
+avatar: https://avatars0.githubusercontent.com/u/40926044?s=500&v=4
 
 # Flags below are optional
 #
