--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ avatar: https://avatars0.githubusercontent.com/u/40926044?s=500&v=4
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: kennyrmccormick@gmail.com
+  email: contact@kunindustries.com
   facebook:
   flickr:
   github: kunindustries
@@ -36,7 +36,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://kunindustries.github.io
+url: https://kunindustries.com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
