--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,9 @@ name: Kun Industries
 # Short bio or description (displayed in the header)
 description: Do it right.
 
+# Long bio or description
+description: Believers of good. Do it right. 
+
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/40926044?s=500&v=4
 
@@ -25,6 +28,7 @@ footer-links:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
+  reddit:
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
