--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,9 @@ long_description: Believers of good. Do it right.
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/40926044?s=500&v=4
 
+collections:
+  - services
+
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
@@ -26,6 +29,7 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
   reddit: 
+  discord: # server id
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
