--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ name: Kun Industries
 description: Do it right.
 
 # Long bio or description
-long_description: Believers of good. Do it right. 
+long_description: Believers of good.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/40926044?s=500&v=4
