--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ name: Kun Industries
 description: Do it right.
 
 # Long bio or description
-long_description: Believers of good.
+long_description: We want to make things, and make things better.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/40926044?s=500&v=4
@@ -24,12 +24,12 @@ footer-links:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter:
+  twitter: kunindustries
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
   reddit: 
-  discord: # server id
+  discord: 421026218113105920
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
